[package]
name = "l0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
toml = "0.5"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
redis = { version = "0.22", features = ["tokio-comp", "json"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
warp = "0.3"
chrono = {version = "0.4", features = ["serde"]}